# agent_skill_langchain

./: README.md  main.py  pyproject.toml
SKILLS/schedule-table-export/: SKILL.md
SKILLS/schedule-table-export/scripts/: export_schedule.py
SKILLS/week-weather-export/: SKILL.md
SKILLS/week-weather-export/scripts/: export_weather.py
output/: schedule-today.md
