[project]
name = "agent_skill_langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "langchain==1.2.6",
    "langchain-mcp-adapters==0.2.1",
    "langchain-ollama==1.0.1",
    "langchain-openai>=1.1.7",
    "langsmith==0.6.4",
    "mcp[cli]==1.26.0",
    "python-dotenv==1.2.1",
]
